apps/forgejo/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: forgejo-ssh
  namespace: forgejo
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: forgejo
  externalIPs:
    - 192.168.1.200
  ports:
    - name: ssh
      port: 22
      targetPort: 22
      protocol: TCP
